--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "request": "^2.85.0"
   }
 }
